Fix code style: add proper imports and use toList()
Code style improvements:
1. Added HashMap import instead of using fully qualified name java.util.HashMap
2. Replaced .collect(java.util.stream.Collectors.toList()) with .toList()

These changes improve code readability and follow modern Java conventions.

All tests pass.

Co-authored-by: nixel2007 <1132840+nixel2007@users.noreply.github.com>